# SentryGround-Zero

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  main.py  run_console.py
.github/workflows/: ci.yml
Progetto 1/: Dockerfile  Makefile  README.md  main.py  requirements.txt  secret.key
Progetto 1/secure_eo_pipeline/: config.py
Progetto 1/secure_eo_pipeline/components/: access_control.py  data_source.py  ids.py  ingestion.py  storage.py
Progetto 1/secure_eo_pipeline/db/: __init__.py  sqlite_adapter.py
Progetto 1/secure_eo_pipeline/ml/: __init__.py  models.py
Progetto 1/secure_eo_pipeline/utils/: logger.py  security.py
Progetto 1/tests/: test_db_and_ids.py  test_ingestion.py
Progetto 2/: CONTRIBUTING.md  LICENSE
Progetto 2/ai_training/: config.default.json  config_loader.py  export_tflite_fp32.py  requirements.txt
Progetto 2/core_engine/build2/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  obc_json_check  sentry_sat_sim
Progetto 2/core_engine/src/: inference_engine.cpp  main.cpp  sensor_frame.hpp  telemetry_json.hpp
Progetto 2/core_engine/tests/: check_telemetry_json.py  json_self_test.cpp
Progetto 2/security_enclave/src/: crypto_signer.cpp  puf_simulator.cpp  puf_simulator.h
Progetto 2/sentry_update/: CMakeLists.txt  README.md  inference_engine.h  setup.py  simulate_acquisition.py
cli/tui/: mission_console.py
core/ml/: advanced_models.py  climate_models.py  features.py  models.py
core/security/cyber/: __init__.py
core/security/cyber/blockchain_audit/: ledger.py
core/security/cyber/quantum_resistant/: pqcrypto.py
data/satellites/data/gravitational_waves/: gw_data.csv
data/satellites/data/sea_level/: sea_level.csv
data/satellites/data/space_weather/: space_weather_unified.csv
data/satellites/data/water_quality/: telangana_water.csv
data/satellites/data/weather/: weather_data.csv
docs/: DEPLOYMENT.md  SECURITY_CONTROLS.md  conf.py  index.md  openapi.yaml
ground_segment/secure_eo_pipeline/: __init__.py  enhanced_ids.py  signature_verification.py  telemetry_bridge.py
k8s/: manifests.yaml  monitoring
services/ground-segment/: .dockerignore  Dockerfile  README.md  alembic.ini  dashboard.py  generate_certs.py  nginx.conf  pytest.ini  requirements.txt  run_console.py  test_models.py
services/ground-segment/api/: main.py
services/ground-segment/cli/: __init__.py  commands.py  session.py  terminal.py
services/ground-segment/data/air_quality/: air_quality.csv
services/ground-segment/data/nasa_ocean/: nasa_ocean_climate.csv
services/ground-segment/migrations/: env.py
services/ground-segment/migrations/versions/: 001_initial.py
services/ground-segment/secure_eo_pipeline/: config.py  constellation_catalog.py
services/ground-segment/secure_eo_pipeline/components/: access_control.py  air_quality_acquisition.py  data_source.py  (+31 more)
services/ground-segment/tests/: conftest.py  test_e2e.py  test_ingestion.py  test_physics.py  test_security.py
services/ground-segment/tui/: __init__.py  enhanced_animations.py  mission_console.py  mission_control.py  unified_console.py
services/ground-segment/web/: __init__.py  dashboard.py  ground_track_map.html  orbit_viewer_3d.html
services/space-segment/: .dockerignore  Dockerfile  sentry_api.py
services/space-segment/ai_training/: doctor.py  export_tflite.py  model_io.py  shap_explainer.py  synthetic_frames.py  train_model.py  verify_tflite.py
services/space-segment/console/: requirements.txt  sentry_console.py
services/space-segment/core_engine/: CMakeLists.txt
services/space-segment/scripts/: build_tensorflow_lite.sh
simulation_data/telemetry_landing_zone/: T+001.json  T+002.json  T+003.json  T+004.json
(+41 files in other folders)
